examples/test/testpolicy8461.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy8461
  namespace: namespace230
spec:
  podSelector:
    matchLabels:
      key1: value21
      key45: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key49: value47
      podSelector:
        matchLabels:
          key23: value0
          key29: value24
          key24: value39
